--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ DEFAULT_FROM_EMAIL=aronyom22@gmail.com
 GOOGLE_CLIENT_ID=1012386092202-r8p09t6ust50kl1a9r0deale4a6mouaj.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/account/google/login/callback/
+GOOGLE_REDIRECT_URI=http://localhost:8000/account/google/login/callback/
