update auth with google and fix  issu

--- a/.env
+++ b/.env
@@ -19,5 +19,6 @@ DEFAULT_FROM_EMAIL=aronyom22@gmail.com
 # Google OAuth2 configuration
 GOOGLE_CLIENT_ID=1012386092202-r8p09t6ust50kl1a9r0deale4a6mouaj.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/account/google/login/callback/
+GOOGLE_REDIRECT_URI=http://localhost:8000/account/google/login/callback/
+FRONTEND_ORIGIN=http://localhost:8080
 GOOGLE_REDIRECT_URI=http://localhost:8000/account/google/login/callback/
